# codex-transcript-folding

./: .bazelrc  README.en.md  README.md  README.zh-CN.md
.codex/environments/: environment.toml
.github/: CODEOWNERS  dependabot.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/scripts/: build-codex-package-archive.sh  rusty_v8_bazel.py  test_macos_signing_entitlements.py  test_rusty_v8_bazel.py
.github/workflows/: README.md  bazel.yml  cargo-deny.yml  ci.yml  codespell.yml  issue-deduplicator.yml  issue-translator.yml  repo-checks.yml  rust-ci-full-nextest-platform.yml  rust-ci-full.yml  rust-ci.yml  rust-release-prepare.yml  rust-release-windows.yml  rust-release-zsh.yml  rust-release.yml  rusty-v8-release.yml  sdk.yml  v8-canary.yml
codex-rs/: Cargo.toml
codex-rs/app-server/: README.md
codex-rs/app-server-protocol/: Cargo.toml
codex-rs/backend-client/: Cargo.toml
codex-rs/cli/: Cargo.toml
codex-rs/cloud-tasks/: Cargo.toml
codex-rs/code-mode-host/: Cargo.toml
codex-rs/codex-client/: Cargo.toml  README.md
codex-rs/codex-client/src/: lib.rs  retry.rs  sse.rs  telemetry.rs
codex-rs/connectors/: Cargo.toml
codex-rs/core/: Cargo.toml  config.schema.json
codex-rs/core/tests/remote_env_windows/: BUILD.bazel
codex-rs/exec-server/: Cargo.toml
codex-rs/external-agent-migration/: Cargo.toml
codex-rs/feedback/: Cargo.toml
codex-rs/http-client/: BUILD.bazel  Cargo.toml  README.md
codex-rs/linux-sandbox/: Cargo.toml
codex-rs/model-provider/: Cargo.toml
docs/: upstream-sync.md
(+585 files in other folders)
