[package]
edition.workspace = true
license.workspace = true
name = "codex-client"
version.workspace = true

[dependencies]
codex-http-client = { workspace = true }
eventsource-stream = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "time", "sync"] }

[lints]
workspace = true

[lib]
doctest = false
test = false
